Adjust font sizes and weights of headings

--- a/source/blog.njk
+++ b/source/blog.njk
@@ -5,18 +5,16 @@ stylesheets:
     - /static/stylesheets/components/items.css
 ---
 
-<p>
-    Some of these articles may link to my <a href="https://blog.arnellebalane.com/" rel="noopener noreferrer">Medium</a>
-    or <a href="https://dev.to/arnellebalane" rel="noopener noreferrer">DEV</a> articles. These are indicated with an
-    icon in the tags section.
-</p>
-
 <section class="Section Blog">
     <ol class="Items">
         <li class="Item">
             <time class="Item__Date fs-16">01/20</time>
             <div>
-                <a class="Item__Heading fw-700" href='#' rel="noopener noreferrer">Building a site navigation menu using React Hooks</a>
+                <a class="Item__Heading fs-24 fw-900" href='#' rel="noopener noreferrer">Building a site navigation menu using React Hooks</a>
+                <p class="Item__Subheading">
+                    My first look at React's latest feature, React Hooks, and how I used it to build my site's navigation menu
+                    as a functional React component that maintains its own state.
+                </p>
                 <ul class="Item__Tags fs-16">
                     <li>#vuejs</li>
                     <li>#vue-cli</li>
@@ -27,7 +25,11 @@ stylesheets:
         <li class="Item">
             <time class="Item__Date fs-16">01/20</time>
             <div>
-                <a class="Item__Heading fw-700" href='#' rel="noopener noreferrer">Building a site navigation menu using React Hooks</a>
+                <a class="Item__Heading fs-24 fw-900" href='#' rel="noopener noreferrer">Building a site navigation menu using React Hooks</a>
+                <p class="Item__Subheading">
+                    My first look at React's latest feature, React Hooks, and how I used it to build my site's navigation menu
+                    as a functional React component that maintains its own state.
+                </p>
                 <ul class="Item__Tags fs-16">
                     <li>#vuejs</li>
                     <li>#vue-cli</li>
@@ -38,7 +40,11 @@ stylesheets:
         <li class="Item">
             <time class="Item__Date fs-16">01/20</time>
             <div>
-                <a class="Item__Heading fw-700" href='#' rel="noopener noreferrer">Building a site navigation menu using React Hooks</a>
+                <a class="Item__Heading fs-24 fw-900" href='#' rel="noopener noreferrer">Building a site navigation menu using React Hooks</a>
+                <p class="Item__Subheading">
+                    My first look at React's latest feature, React Hooks, and how I used it to build my site's navigation menu
+                    as a functional React component that maintains its own state.
+                </p>
                 <ul class="Item__Tags fs-16">
                     <li>#vuejs</li>
                     <li>#vue-cli</li>
@@ -49,7 +55,11 @@ stylesheets:
         <li class="Item">
             <time class="Item__Date fs-16">01/20</time>
             <div>
-                <a class="Item__Heading fw-700" href='#' rel="noopener noreferrer">Building a site navigation menu using React Hooks</a>
+                <a class="Item__Heading fs-24 fw-900" href='#' rel="noopener noreferrer">Building a site navigation menu using React Hooks</a>
+                <p class="Item__Subheading">
+                    My first look at React's latest feature, React Hooks, and how I used it to build my site's navigation menu
+                    as a functional React component that maintains its own state.
+                </p>
                 <ul class="Item__Tags fs-16">
                     <li>#vuejs</li>
                     <li>#vue-cli</li>
@@ -60,7 +70,11 @@ stylesheets:
         <li class="Item">
             <time class="Item__Date fs-16">01/20</time>
             <div>
-                <a class="Item__Heading fw-700" href='#' rel="noopener noreferrer">Building a site navigation menu using React Hooks</a>
+                <a class="Item__Heading fs-24 fw-900" href='#' rel="noopener noreferrer">Building a site navigation menu using React Hooks</a>
+                <p class="Item__Subheading">
+                    My first look at React's latest feature, React Hooks, and how I used it to build my site's navigation menu
+                    as a functional React component that maintains its own state.
+                </p>
                 <ul class="Item__Tags fs-16">
                     <li>#vuejs</li>
                     <li>#vue-cli</li>
