--- a/source/events.njk
+++ b/source/events.njk
@@ -1,6 +1,7 @@
 ---
 layout: layouts/me-header.njk
 stylesheets:
+    - /static/stylesheets/pages/events.css
     - /static/stylesheets/components/items.css
 ---
 
@@ -9,56 +10,56 @@ stylesheets:
     Firebase, and other Web topics. You can invite me to speak or do a workshop at y our event!
 </p>
 
-<section class="Section">
+<section class="Section Events">
     <h2 class="Section__Title fs-24 fw-900">Upcoming Events</h2>
 
     <ol class="Items">
         <li class="Item">
             <time class="Item__Date fs-16">08/24</time>
             <div>
-                <a class="Item__Heading fw-700" href='#' rel="noopener noreferrer">VueJS Cebu Meetup</a>
+                <a class="Item__Heading fs-20 fw-900" href='#' rel="noopener noreferrer">VueJS Cebu Meetup</a>
                 <p class="Item__Subheading">Talk: Firebase Workshop</p>
             </div>
         </li>
         <li class="Item">
             <time class="Item__Date fs-16">09/13</time>
             <div>
-                <a class="Item__Heading fw-700" href='#' rel="noopener noreferrer">GDG Bacolod: Angular + Firebase Codelabs</a>
+                <a class="Item__Heading fs-20 fw-900" href='#' rel="noopener noreferrer">GDG Bacolod: Angular + Firebase Codelabs</a>
                 <p class="Item__Subheading">Workshop: Angular + Firebase</p>
             </div>
         </li>
         <li class="Item">
             <time class="Item__Date fs-16">09/14</time>
             <div>
-                <a class="Item__Heading fw-700" href='#' rel="noopener noreferrer">GDG Bacolod: Angular + Firebase Codelabs</a>
+                <a class="Item__Heading fs-20 fw-900" href='#' rel="noopener noreferrer">GDG Bacolod: Angular + Firebase Codelabs</a>
                 <p class="Item__Subheading">Workshop: Angular + Firebase</p>
             </div>
         </li>
     </ol>
 </section>
 
-<section class="Section">
+<section class="Section Events">
     <h2 class="Section__Title fs-24 fw-900">Previous Events</h2>
 
     <ol class="Items">
         <li class="Item">
             <time class="Item__Date fs-16">08/24</time>
             <div>
-                <a class="Item__Heading fw-700" href='#' rel="noopener noreferrer">VueJS Cebu Meetup</a>
+                <a class="Item__Heading fs-20 fw-900" href='#' rel="noopener noreferrer">VueJS Cebu Meetup</a>
                 <p class="Item__Subheading">Talk: Firebase Workshop</p>
             </div>
         </li>
         <li class="Item">
             <time class="Item__Date fs-16">09/13</time>
             <div>
-                <a class="Item__Heading fw-700" href='#' rel="noopener noreferrer">GDG Bacolod: Angular + Firebase Codelabs</a>
+                <a class="Item__Heading fs-20 fw-900" href='#' rel="noopener noreferrer">GDG Bacolod: Angular + Firebase Codelabs</a>
                 <p class="Item__Subheading">Workshop: Angular + Firebase</p>
             </div>
         </li>
         <li class="Item">
             <time class="Item__Date fs-16">09/14</time>
             <div>
-                <a class="Item__Heading fw-700" href='#' rel="noopener noreferrer">GDG Bacolod: Angular + Firebase Codelabs</a>
+                <a class="Item__Heading fs-20 fw-900" href='#' rel="noopener noreferrer">GDG Bacolod: Angular + Firebase Codelabs</a>
                 <p class="Item__Subheading">Workshop: Angular + Firebase</p>
             </div>
         </li>
