--- a/source/projects.njk
+++ b/source/projects.njk
@@ -14,7 +14,7 @@ stylesheets:
     <ol class="Items">
         <li class="Item">
             <div>
-                <a class="Item__Heading fw-700" href='#' rel="noopener noreferrer">Streaks</a>
+                <a class="Item__Heading fs-20 fw-900" href='#' rel="noopener noreferrer">Streaks</a>
                 <p class="Item__Subheading">A Web application for tracking personal streaks, GitHub-style.</p>
                 <ul class="Item__Tags fs-16">
                     <li>#vuejs</li>
@@ -25,7 +25,7 @@ stylesheets:
         </li>
         <li class="Item">
             <div>
-                <a class="Item__Heading fw-700" href='#' rel="noopener noreferrer">Endpoints</a>
+                <a class="Item__Heading fs-20 fw-900" href='#' rel="noopener noreferrer">Endpoints</a>
                 <p class="Item__Subheading">
                     Worked on the frontend for a Web application for creating URL endpoints with customizable responses
                     that can be used when developing other applications. Built in collaboration with Emmanuel and Aldrin.
@@ -46,7 +46,7 @@ stylesheets:
     <ol class="Items">
         <li class="Item">
             <div>
-                <a class="Item__Heading fw-700" href='#' rel="noopener noreferrer">mdi-cli</a>
+                <a class="Item__Heading fs-20 fw-900" href='#' rel="noopener noreferrer">mdi-cli</a>
                 <p class="Item__Subheading">A command-line tool for generating Material Design icons.</p>
                 <ul class="Item__Tags fs-16">
                     <li>#cli</li>
@@ -57,7 +57,7 @@ stylesheets:
         </li>
         <li class="Item">
             <div>
-                <a class="Item__Heading fw-700" href='#' rel="noopener noreferrer">hermes</a>
+                <a class="Item__Heading fs-20 fw-900" href='#' rel="noopener noreferrer">hermes</a>
                 <p class="Item__Subheading">Client-side messaging channel for sending data from one browser tab to another.</p>
                 <ul class="Item__Tags fs-16">
                     <li>#broadcast-channel-api</li>
