Make avatar in Index page responsive

--- a/source/index.njk
+++ b/source/index.njk
@@ -8,15 +8,11 @@ stylesheets:
 <Section class="Section Hero">
     <h1 class="Hero__Title fs-36 fw-900">Hey, I'm Arnelle!</h1>
 
-    <div class="Hero__Body">
-        <img
-            class="Hero__Image"
-            src="/static/images/avatar.jpg"
-            alt="Arnelle Balane"
-            width="200px"
-            height="200px"
-        >
-        <div>
+    <div class="clearfix">
+        <div class="Hero__Image">
+            <img src="/static/images/avatar.jpg" alt="Arnelle Balane" width="200px" height="200px">
+        </div>
+        <div class="Hero__Content">
             <p>I'm a Web Developer from Cebu, Philippines.</p>
             <p>I love experimenting with and sharing about cool new Web technologies and techniques.</p>
             <p>
