--- a/source/static/stylesheets/pages/index.css
+++ b/source/static/stylesheets/pages/index.css
@@ -4,20 +4,23 @@
     margin-bottom: 3rem;
 }
 
-.Hero__Body {
-    display: flex;
-    align-items: flex-start;
-}
-
 .Hero__Image {
-    display: block;
-    width: 20rem;
-    height: 20rem;
+    float: left;
+
+    width: calc(50% - 3rem);
+    max-width: 20rem;
     margin-right: 3rem;
+    margin-bottom: 1rem;
 }
 
-.Hero__Subheading {
-    margin-top: 3rem;
+.Hero__Image img {
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+
+.Hero__Content {
+    padding-top: 1rem;
 }
 
 .SocialLinks {
