Add Pagination section in Blog page

--- a/source/blog.njk
+++ b/source/blog.njk
@@ -84,3 +84,14 @@ stylesheets:
         </li>
     </ol>
 </section>
+
+<section class="Section Pagination">
+    <a class="Paginator Paginator--previous fs-18" href="#">
+        <img src="/static/images/icons/left.svg" alt="Previous">
+        7 older articles
+    </a>
+    <a class="Paginator Paginator--next fs-18" href="#">
+        5 newer articles
+        <img src="/static/images/icons/right.svg" alt="Next">
+    </a>
+</section>
