--- a/source/projects.njk
+++ b/source/projects.njk
@@ -11,7 +11,7 @@ stylesheets:
 </p>
 
 <section class="Section Projects">
-    <ol class="Items">
+    <ol class="Items Items--grid">
         {% for project in (projects | filterProjects) %}
         <li class="Item">
             <div>
@@ -36,7 +36,7 @@ stylesheets:
 <section class="Section Projects">
     <h2 class="Section__Title fs-24 fw-900">Tools & Libraries</h2>
 
-    <ol class="Items">
+    <ol class="Items Items--grid">
         {% for project in (projects | filterLibraries) %}
         <li class="Item">
             <div>
