--- a/source/_includes/layouts/me-header.njk
+++ b/source/_includes/layouts/me-header.njk
@@ -3,10 +3,10 @@ layout: layouts/main.njk
 ---
 
 <section class="Section MeHeader">
-    <div class="ProfileWidget">
+    <a class="ProfileWidget" href="/">
         <img class="ProfileWidget__Image" src="/static/images/avatar.jpg" alt="Arnelle Balane">
         <h1 class="fs-24 fw-900">Arnelle Balane</h1>
-    </div>
+    </a>
 </section>
 
 {{ content | safe }}
