--- a/source/_includes/layouts/main.njk
+++ b/source/_includes/layouts/main.njk
@@ -9,6 +9,13 @@
         <link rel="stylesheet" href="{{ stylesheet }}">
         {% endfor %}
 
+        <meta property="og:title" content="Arnelle Balane">
+        <meta property="og:description" content="Arnelle Balane's Personal Website">
+        <meta property="og:image" content="https://beta.arnellebalane.com/static/images/social-share.jpg">
+        <meta property="og:url" content="https://beta.arnellebalane.com/">
+        <meta name="description" content="Arnelle Balane's Personal Website">
+        <meta name="twitter:card" content="summary_large_image">
+
         <title>{{ title or 'Arnelle Balane'}}</title>
     </head>
 
